adds contact details

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
       <script type="text/javascript" src ="app.js"></script>
       <link rel="stylesheet" href="main.css" media="screen" title="no title">
-  </head>
+      <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
+      <link rel="icon" type="image/png" href="./images/favicon-16x16.png" sizes="16x16" />  </head>
   <body>
     <!-- PARALLAX -->
     <div class="parallax-container">
@@ -55,10 +56,10 @@
       <div id ="icons" class="row right">
         <div class="col m8 s8"></div>
         <div class="col s2">
-          <a href="https://github.com/greicens"><img class="icon" src="images/github-logo.png" alt="github-icon"></a>
+          <a href="https://github.com/greicens" target="_blank"><img class="icon" src="images/github-logo.png" alt="github-icon"></a>
         </div>
         <div class="col s2 pull-s9">
-          <a href="https://www.linkedin.com/in/greicesilva"><img class="icon" src="images/linkedin-logo.png" alt="linkedin-icon"></a>
+          <a href="https://www.linkedin.com/in/greicesilva" target="_blank"><img class="icon" src="images/linkedin-logo.png" alt="linkedin-icon"></a>
         </div>
       </div>
     </div>
@@ -111,12 +112,30 @@
   <div id="resume" class="section">
     <h2>RESUME</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn" href="gns_resume.pdf" target="_blank">Download My Resume</a>
 
   </div>
   <!-- CONTACT -->
-  <div id="contact" class="section">
-    <h2>CONTACT</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div id="contact" class="section teal">
+    <h2 class="subtitle">GET IN TOUCH </h2>
+    <div class="row center">
+        <p id="thanks" class="mustard">Thanks for checking out my work.<br> I’d love to learn about what you’re doing!</p>
+        <p><i class="material-icons letter">email</i></p>
+        <p id="email">gsilva@mail.ccsf.edu</p>
+    </div>
+    <div class="row center">
+      <div class="col s4"></div>
+      <div class="col s2">
+        <a href="https://github.com/greicens" target="_blank"><img class="icon" src="images/github-logo.png" alt="github-icon"></a>
+      </div>
+      <div class="col s2">
+        <a href="https://www.linkedin.com/in/greicesilva" target="_blank"><img class="icon" src="images/linkedin-logo.png" alt="linkedin-icon"></a>
+      </div>
+      <div class="col s4 left-align"></div>
+    </div>
+      <div class="row center">
+        <a href="#home"><img class ="icon" src="images/arrow-up.png" alt=""></a>
+      </div>
   </div>
   </body>
 </html>
