--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <br>
       <div id ="icons" class="row right">
         <div class="col m8 s8"></div>
-        <div class="col s2">
-          <a href="https://github.com/greicens" target="_blank"><img class="icon" src="images/github-logo.png" alt="github-icon"></a>
+        <div class="col s2 social">
+          <a href="https://github.com/greicens" target="_blank"><img class="icon " src="images/github-logo.png" alt="github-icon"></a>
         </div>
         <div class="col s2 pull-s9">
           <a href="https://www.linkedin.com/in/greicesilva" target="_blank"><img class="icon" src="images/linkedin-logo.png" alt="linkedin-icon"></a>
