--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div >
       <h1>Greice Silva</h1>
       <br>
-      <h5><%= Full Stack Web Developer | Back end focused %></h5>
+      <h5><%= Full Stack Web Developer | Back-End Focused %></h5>
       <br>
       <div id ="icons" class="row right">
         <div class="col m8 s8"></div>
@@ -75,8 +75,8 @@
           <img id="profile-pic" src="images/greice_profile_pic.jpg" alt="">
         </div>
         <div class="col m5">
-          <p class="about"> I am an easy-going Full-Stack Web Developer based in San Francisco, CA.
-            I love to solve challenging problems and found my passion in backend development.
+          <p class="about"> I am a Full Stack Web Developer based in San Francisco, CA.
+            I love to solve challenging problems and found my passion in back-end development.
             Before becoming a developer, my work experience involved customer-facing and business management roles.</p>
           <p class="about"> When I am not coding, I like to spend time with my family and practicing yoga. I also enjoy handicrafts like crochet. </p>
           <div class="row center-align">
