--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p class="about"> I am a Full Stack Web Developer based in San Francisco, CA.
             I love to solve challenging problems and found my passion in back-end development.
             Before becoming a developer, my work experience involved customer-facing and business management roles.</p>
-          <p class="about"> When I am not coding, I like to spend time with my family and practicing yoga. I also enjoy handicrafts like crochet. </p>
+          <p class="about"> When I am not coding, I like to spend time with my family and practicing yoga. I also enjoy crafts like crochet. </p>
           <div class="row center-align">
             <a class="btn" href="GreiceSilvaResume.pdf" target="_blank">Check Out My Resume</a>
           </div>
@@ -89,7 +89,7 @@
     </div>
   <!-- PROJECTS -->
   <div id="projects" class="section">
-    <h2>PORTIFOLIO</h2>
+    <h2>PORTFOLIO</h2>
     <div class="row">
       <div class="col m1">
 
