adds flowxo trigger

--- a/index.html
+++ b/index.html
@@ -226,5 +226,6 @@
         <a href="#home"><img class ="icon" src="images/arrow-up.png" alt=""></a>
       </div>
   </div>
+  <script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IjAwOTY4OCIsIndlYiI6eyJib3RJZCI6IjVhMjQ0OTg1MjMwYjQzMDA5ODVmNGNiNSIsInRoZW1lIjoiMDA5Njg4In0sIndlbGNvbWVUZXh0IjoiVHJ5IG1lISBJIGNhbiBoZWxwIHlvdSBmaW5kIGluZm9ybWF0aW9uIG9uIHRoaXMgcGFnZS4ifQ==" async defer></script>
   </body>
 </html>
