--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">SF-TRAVELOGUE<i class="material-icons right">close</i></span>
-            <p>App build for users to view or add interesting places to San Francisco Neighborhoods. Built over the course of 5-days with another developer. I built the server, designed the database structure, created CRUD actions for models and implemented handlebars.</p>
+            <p>App built for users to view or add interesting places to San Francisco Neighborhoods. Built over the course of 5-days with another developer. I built the server, designed the database structure, created CRUD actions for models and implemented handlebars.</p>
             <p>Technologies Included:</p>
               <div class="chip">JavaScript</div>
               <div class="chip">jQuery</div>
@@ -136,7 +136,7 @@
               <div class="chip">Ruby</div>
               <div class="chip">Rails</div>
               <div class="chip">Postgresql</div>
-              <div class="chip">Materialize</div>
+              <div class="chip">Bootstrap</div>
           </div>
         </div>
       </div>
