update heroku stack

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul id='dropdown1' class='dropdown-content'>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#projects">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <nav class="white">
@@ -38,7 +38,7 @@
             <ul class="right hide-on-med-and-down">
               <li><a href="#home">Home</a></li>
               <li><a href="#about">About</a></li>
-              <li><a href="#projects">Projects</a></li>
+              <li><a href="#projects">Portfolio</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
             <a href="#!" data-activates="dropdown1" class="dropdown-button"><i class="material-icons hide-on-large-only">menu</i></a>
@@ -49,7 +49,7 @@
     <div >
       <h1>Greice Silva</h1>
       <br>
-      <h5><%= Full Stack Web Developer | Back-End Focused %></h5>
+      <h5>Software Developer</h5>
       <br>
       <div id ="icons" class="row right">
         <div class="col m8 s8"></div>
@@ -75,16 +75,16 @@
           <img id="profile-pic" src="images/greice_profile_pic.jpg" alt="">
         </div>
         <div class="col m5">
-          <p class="about"> I am a Full Stack Web Developer based in San Francisco, CA.
-            I love to solve challenging problems and found my passion in back-end development.
+          <p class="about"> I am a Full Stack Software Developer based in the San Francisco Bay Area, CA.
+            I love to solve challenging problems and I am passionated about creating high quality software.
             Before becoming a developer, my work experience involved customer-facing and business management roles.</p>
           <p class="about"> When I am not coding, I like to spend time with my family and practicing yoga. I also enjoy crafts like crochet. </p>
+          <br>
+          <br>
           <div class="row center-align">
             <a class="btn" href="GreiceSilvaResume.pdf" target="_blank">Check Out My Resume</a>
           </div>
         </div>
-
-
       </div>
     </div>
   <!-- PROJECTS -->
